FEAT: Model optimization 80-83% accuracy

--- a/Image Classification.ipynb
+++ b/Image Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,39 +21,16 @@
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.layers import Conv2D, Activation, Dropout, Dense, Flatten, MaxPooling2D\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.optimizers import SGD, Adam\n",
+    "from tensorflow.keras.optimizers import RMSprop\n",
     "from tensorflow.keras.callbacks import TensorBoard\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 4019/4019 [02:13<00:00, 30.20it/s]\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1659/1659 [00:56<00:00, 29.27it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5678\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "training_data = []\n",
     "DATADIR = \"C:/Users/User/Desktop/ML/Clothes\"\n",
@@ -80,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,15 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Name for tensorboard logs AlexNEt implementation 70-73% valaccuracy\n",
-    "NAME = \"Tags-notags-clothes-CNN-{}\".format(int(time.time()))\n",
+    "#Name for tensorboard logs AlexNEt implementation 74-77% valaccuracy\n",
+    "IMG_SIZE = 256\n",
+    "NAME = \"Tags-notags-clothes-AlexNEt-{}\".format(int(time.time()))\n",
     "tensorboard = TensorBoard(log_dir=\"logs/{}\".format(NAME))\n",
     "model = keras.models.Sequential([\n",
-    "    keras.layers.Conv2D(filters=96, kernel_size=(11,11), strides=(4,4), activation='relu', input_shape=(256,256,3)),\n",
+    "    keras.layers.Conv2D(filters=96, kernel_size=(11,11), strides=(4,4), activation='relu', input_shape=(IMG_SIZE,IMG_SIZE,3)),\n",
     "    keras.layers.BatchNormalization(),\n",
     "    keras.layers.MaxPool2D(pool_size=(3,3), strides=(2,2)),\n",
     "    keras.layers.Conv2D(filters=256, kernel_size=(5,5), strides=(1,1), activation='relu', padding=\"same\"),\n",
@@ -181,37 +159,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Name for tensorboard logs My CNN 69% valaccuracy\n",
+    "#Name for tensorboard logs My CNN 80-83% valaccuracy\n",
     "NAME = \"Tags-notags-clothes-CNN-{}\".format(int(time.time()))\n",
     "tensorboard = TensorBoard(log_dir=\"logs/{}\".format(NAME))\n",
+    "IMG_SIZE = 256\n",
     "# Model Architecture \n",
     "model = Sequential()\n",
-    "model.add(Conv2D(32, (3, 3), input_shape=(IMG_SIZE, IMG_SIZE, 3)))\n",
+    "model.add(Conv2D(16, (3, 3), input_shape=(IMG_SIZE, IMG_SIZE, 3)))\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "model.add(Conv2D(32, (3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
     "\n",
     "model.add(Conv2D(64, (3, 3)))\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "model.add(Dropout(0.4))\n",
     "\n",
-    "model.add(Conv2D(128, (3, 3)))\n",
+    "\n",
+    "model.add(Conv2D(64, (3, 3)))\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "model.add(Dropout(0.35))\n",
     "\n",
     "model.add(Conv2D(64, (3, 3)))\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "\n",
     "model.add(Flatten())  # this converts our 3D feature maps to 1D feature vectors\n",
-    "model.add(Dense(1024))\n",
+    "model.add(Dense(512))\n",
     "model.add(Activation('relu'))\n",
-    "model.add(Dropout(0.3))\n",
+    "model.add(Dropout(0.4))\n",
     "model.add(Dense(1))\n",
     "model.add(Activation('sigmoid'))\n",
     "\n"
@@ -219,65 +202,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d (Conv2D)              (None, 62, 62, 96)        34944     \n",
+      "conv2d_15 (Conv2D)           (None, 254, 254, 16)      448       \n",
       "_________________________________________________________________\n",
-      "batch_normalization (BatchNo (None, 62, 62, 96)        384       \n",
+      "activation_14 (Activation)   (None, 254, 254, 16)      0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 30, 30, 96)        0         \n",
+      "max_pooling2d_13 (MaxPooling (None, 127, 127, 16)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 30, 30, 256)       614656    \n",
+      "conv2d_16 (Conv2D)           (None, 125, 125, 32)      4640      \n",
       "_________________________________________________________________\n",
-      "batch_normalization_1 (Batch (None, 30, 30, 256)       1024      \n",
+      "activation_15 (Activation)   (None, 125, 125, 32)      0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 256)       0         \n",
+      "max_pooling2d_14 (MaxPooling (None, 62, 62, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 14, 14, 384)       885120    \n",
+      "conv2d_17 (Conv2D)           (None, 60, 60, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "batch_normalization_2 (Batch (None, 14, 14, 384)       1536      \n",
+      "activation_16 (Activation)   (None, 60, 60, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 14, 14, 384)       147840    \n",
+      "max_pooling2d_15 (MaxPooling (None, 30, 30, 64)        0         \n",
       "_________________________________________________________________\n",
-      "batch_normalization_3 (Batch (None, 14, 14, 384)       1536      \n",
+      "conv2d_18 (Conv2D)           (None, 28, 28, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 14, 14, 256)       98560     \n",
+      "activation_17 (Activation)   (None, 28, 28, 64)        0         \n",
       "_________________________________________________________________\n",
-      "batch_normalization_4 (Batch (None, 14, 14, 256)       1024      \n",
+      "max_pooling2d_16 (MaxPooling (None, 14, 14, 64)        0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 6, 6, 256)         0         \n",
+      "conv2d_19 (Conv2D)           (None, 12, 12, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 9216)              0         \n",
+      "activation_18 (Activation)   (None, 12, 12, 64)        0         \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 4096)              37752832  \n",
+      "max_pooling2d_17 (MaxPooling (None, 6, 6, 64)          0         \n",
       "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 4096)              0         \n",
+      "flatten_3 (Flatten)          (None, 2304)              0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 4096)              16781312  \n",
+      "dense_7 (Dense)              (None, 512)               1180160   \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 4096)              0         \n",
+      "activation_19 (Activation)   (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 4097      \n",
+      "dropout_3 (Dropout)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 1)                 513       \n",
+      "_________________________________________________________________\n",
+      "activation_20 (Activation)   (None, 1)                 0         \n",
       "=================================================================\n",
-      "Total params: 56,324,865\n",
-      "Trainable params: 56,322,113\n",
-      "Non-trainable params: 2,752\n",
+      "Total params: 1,278,113\n",
+      "Trainable params: 1,278,113\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
+    "#Model compilation\n",
     "model.compile(loss=\"binary_crossentropy\",\n",
-    "             optimizer=\"adam\",\n",
+    "             optimizer=RMSprop(lr=0.001),\n",
     "             metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
@@ -285,49 +273,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "142/142 [==============================] - 21s 76ms/step - loss: 10.3273 - accuracy: 0.6208 - val_loss: 0.6487 - val_accuracy: 0.7315\n",
-      "Epoch 2/10\n",
-      "142/142 [==============================] - 5s 34ms/step - loss: 0.6882 - accuracy: 0.6654 - val_loss: 0.5730 - val_accuracy: 0.7262\n",
-      "Epoch 3/10\n",
-      "142/142 [==============================] - 5s 33ms/step - loss: 0.6460 - accuracy: 0.6716 - val_loss: 0.7420 - val_accuracy: 0.6778\n",
-      "Epoch 4/10\n",
-      "142/142 [==============================] - 5s 33ms/step - loss: 0.5944 - accuracy: 0.7094 - val_loss: 0.6116 - val_accuracy: 0.7350\n",
-      "Epoch 5/10\n",
-      "142/142 [==============================] - 5s 32ms/step - loss: 0.5872 - accuracy: 0.7061 - val_loss: 0.6108 - val_accuracy: 0.7157\n",
-      "Epoch 6/10\n",
-      "142/142 [==============================] - 5s 32ms/step - loss: 0.6872 - accuracy: 0.6920 - val_loss: 0.8709 - val_accuracy: 0.7298\n",
-      "Epoch 7/10\n",
-      "142/142 [==============================] - 5s 33ms/step - loss: 0.6187 - accuracy: 0.7030 - val_loss: 0.6914 - val_accuracy: 0.5960\n",
-      "Epoch 8/10\n",
-      "142/142 [==============================] - 5s 33ms/step - loss: 0.6249 - accuracy: 0.6884 - val_loss: 0.5951 - val_accuracy: 0.7324\n",
-      "Epoch 9/10\n",
-      "142/142 [==============================] - 5s 33ms/step - loss: 0.6419 - accuracy: 0.6799 - val_loss: 0.5538 - val_accuracy: 0.7315\n",
-      "Epoch 10/10\n",
-      "142/142 [==============================] - 5s 32ms/step - loss: 0.6713 - accuracy: 0.6884 - val_loss: 0.5670 - val_accuracy: 0.7306\n"
+      "Epoch 1/15\n",
+      "142/142 [==============================] - 19s 133ms/step - loss: 0.1106 - accuracy: 0.9582 - val_loss: 0.7572 - val_accuracy: 0.8046\n",
+      "Epoch 2/15\n",
+      "142/142 [==============================] - 4s 29ms/step - loss: 0.0993 - accuracy: 0.9665 - val_loss: 0.8158 - val_accuracy: 0.8143\n",
+      "Epoch 3/15\n",
+      "142/142 [==============================] - 4s 29ms/step - loss: 0.0992 - accuracy: 0.9674 - val_loss: 0.9623 - val_accuracy: 0.8389\n",
+      "Epoch 4/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0862 - accuracy: 0.9714 - val_loss: 0.9293 - val_accuracy: 0.8275\n",
+      "Epoch 5/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0859 - accuracy: 0.9729 - val_loss: 0.8903 - val_accuracy: 0.8231\n",
+      "Epoch 6/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0865 - accuracy: 0.9690 - val_loss: 1.0076 - val_accuracy: 0.8169\n",
+      "Epoch 7/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0746 - accuracy: 0.9753 - val_loss: 0.9272 - val_accuracy: 0.8310\n",
+      "Epoch 8/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0700 - accuracy: 0.9786 - val_loss: 1.2547 - val_accuracy: 0.8248\n",
+      "Epoch 9/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0801 - accuracy: 0.9760 - val_loss: 1.0494 - val_accuracy: 0.8310\n",
+      "Epoch 10/15\n",
+      "142/142 [==============================] - 4s 29ms/step - loss: 0.0698 - accuracy: 0.9789 - val_loss: 1.0166 - val_accuracy: 0.8239\n",
+      "Epoch 11/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0599 - accuracy: 0.9808 - val_loss: 0.9124 - val_accuracy: 0.8275\n",
+      "Epoch 12/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0650 - accuracy: 0.9797 - val_loss: 1.1780 - val_accuracy: 0.8239\n",
+      "Epoch 13/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0611 - accuracy: 0.9782 - val_loss: 0.9031 - val_accuracy: 0.8477\n",
+      "Epoch 14/15\n",
+      "142/142 [==============================] - 4s 30ms/step - loss: 0.0585 - accuracy: 0.9841 - val_loss: 1.1832 - val_accuracy: 0.8257\n",
+      "Epoch 15/15\n",
+      "142/142 [==============================] - 4s 29ms/step - loss: 0.0609 - accuracy: 0.9824 - val_loss: 1.0774 - val_accuracy: 0.8028\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x29e44882fa0>"
+       "<tensorflow.python.keras.callbacks.History at 0x256e92618b0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "epochs = 10\n",
-    "model.fit(X, y, batch_size=32, validation_split=0.2, epochs=epochs, callbacks=[tensorboard])"
+    "#Training with 15 epochs and 20% validation split. Logs of loss and accuracy are sent to tensorboard\n",
+    "epochs = 15\n",
+    "model.fit(X, y, batch_size=32, validation_split=0.2, epochs=epochs,verbose=1, callbacks=[tensorboard])"
    ]
   }
  ],
