FEAT: Model testing with testset

--- a/Image Classification.ipynb
+++ b/Image Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.layers import Conv2D, Activation, Dropout, Dense, Flatten, MaxPooling2D\n",
+    "from tensorflow.keras.layers import Conv2D, Activation, Dropout, Dense, Flatten, MaxPooling2D, BatchNormalization\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.optimizers import RMSprop\n",
     "from tensorflow.keras.callbacks import TensorBoard\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,40 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Name for tensorboard logs AlexNEt implementation 74-77% valaccuracy\n",
-    "IMG_SIZE = 256\n",
-    "NAME = \"Tags-notags-clothes-AlexNEt-{}\".format(int(time.time()))\n",
-    "tensorboard = TensorBoard(log_dir=\"logs/{}\".format(NAME))\n",
-    "model = keras.models.Sequential([\n",
-    "    keras.layers.Conv2D(filters=96, kernel_size=(11,11), strides=(4,4), activation='relu', input_shape=(IMG_SIZE,IMG_SIZE,3)),\n",
-    "    keras.layers.BatchNormalization(),\n",
-    "    keras.layers.MaxPool2D(pool_size=(3,3), strides=(2,2)),\n",
-    "    keras.layers.Conv2D(filters=256, kernel_size=(5,5), strides=(1,1), activation='relu', padding=\"same\"),\n",
-    "    keras.layers.BatchNormalization(),\n",
-    "    keras.layers.MaxPool2D(pool_size=(3,3), strides=(2,2)),\n",
-    "    keras.layers.Conv2D(filters=384, kernel_size=(3,3), strides=(1,1), activation='relu', padding=\"same\"),\n",
-    "    keras.layers.BatchNormalization(),\n",
-    "    keras.layers.Conv2D(filters=384, kernel_size=(1,1), strides=(1,1), activation='relu', padding=\"same\"),\n",
-    "    keras.layers.BatchNormalization(),\n",
-    "    keras.layers.Conv2D(filters=256, kernel_size=(1,1), strides=(1,1), activation='relu', padding=\"same\"),\n",
-    "    keras.layers.BatchNormalization(),\n",
-    "    keras.layers.MaxPool2D(pool_size=(3,3), strides=(2,2)),\n",
-    "    keras.layers.Flatten(),\n",
-    "    keras.layers.Dense(4096, activation='relu'),\n",
-    "    keras.layers.Dropout(0.5),\n",
-    "    keras.layers.Dense(4096, activation='relu'),\n",
-    "    keras.layers.Dropout(0.5),\n",
-    "    keras.layers.Dense(1, activation='sigmoid')\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,66 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_4\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_15 (Conv2D)           (None, 254, 254, 16)      448       \n",
-      "_________________________________________________________________\n",
-      "activation_14 (Activation)   (None, 254, 254, 16)      0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_13 (MaxPooling (None, 127, 127, 16)      0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_16 (Conv2D)           (None, 125, 125, 32)      4640      \n",
-      "_________________________________________________________________\n",
-      "activation_15 (Activation)   (None, 125, 125, 32)      0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_14 (MaxPooling (None, 62, 62, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_17 (Conv2D)           (None, 60, 60, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "activation_16 (Activation)   (None, 60, 60, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_15 (MaxPooling (None, 30, 30, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_18 (Conv2D)           (None, 28, 28, 64)        36928     \n",
-      "_________________________________________________________________\n",
-      "activation_17 (Activation)   (None, 28, 28, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_16 (MaxPooling (None, 14, 14, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_19 (Conv2D)           (None, 12, 12, 64)        36928     \n",
-      "_________________________________________________________________\n",
-      "activation_18 (Activation)   (None, 12, 12, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_17 (MaxPooling (None, 6, 6, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 2304)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 512)               1180160   \n",
-      "_________________________________________________________________\n",
-      "activation_19 (Activation)   (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 1)                 513       \n",
-      "_________________________________________________________________\n",
-      "activation_20 (Activation)   (None, 1)                 0         \n",
-      "=================================================================\n",
-      "Total params: 1,278,113\n",
-      "Trainable params: 1,278,113\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Model compilation\n",
     "model.compile(loss=\"binary_crossentropy\",\n",
@@ -273,60 +183,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/15\n",
-      "142/142 [==============================] - 19s 133ms/step - loss: 0.1106 - accuracy: 0.9582 - val_loss: 0.7572 - val_accuracy: 0.8046\n",
-      "Epoch 2/15\n",
-      "142/142 [==============================] - 4s 29ms/step - loss: 0.0993 - accuracy: 0.9665 - val_loss: 0.8158 - val_accuracy: 0.8143\n",
-      "Epoch 3/15\n",
-      "142/142 [==============================] - 4s 29ms/step - loss: 0.0992 - accuracy: 0.9674 - val_loss: 0.9623 - val_accuracy: 0.8389\n",
-      "Epoch 4/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0862 - accuracy: 0.9714 - val_loss: 0.9293 - val_accuracy: 0.8275\n",
-      "Epoch 5/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0859 - accuracy: 0.9729 - val_loss: 0.8903 - val_accuracy: 0.8231\n",
-      "Epoch 6/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0865 - accuracy: 0.9690 - val_loss: 1.0076 - val_accuracy: 0.8169\n",
-      "Epoch 7/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0746 - accuracy: 0.9753 - val_loss: 0.9272 - val_accuracy: 0.8310\n",
-      "Epoch 8/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0700 - accuracy: 0.9786 - val_loss: 1.2547 - val_accuracy: 0.8248\n",
-      "Epoch 9/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0801 - accuracy: 0.9760 - val_loss: 1.0494 - val_accuracy: 0.8310\n",
-      "Epoch 10/15\n",
-      "142/142 [==============================] - 4s 29ms/step - loss: 0.0698 - accuracy: 0.9789 - val_loss: 1.0166 - val_accuracy: 0.8239\n",
-      "Epoch 11/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0599 - accuracy: 0.9808 - val_loss: 0.9124 - val_accuracy: 0.8275\n",
-      "Epoch 12/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0650 - accuracy: 0.9797 - val_loss: 1.1780 - val_accuracy: 0.8239\n",
-      "Epoch 13/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0611 - accuracy: 0.9782 - val_loss: 0.9031 - val_accuracy: 0.8477\n",
-      "Epoch 14/15\n",
-      "142/142 [==============================] - 4s 30ms/step - loss: 0.0585 - accuracy: 0.9841 - val_loss: 1.1832 - val_accuracy: 0.8257\n",
-      "Epoch 15/15\n",
-      "142/142 [==============================] - 4s 29ms/step - loss: 0.0609 - accuracy: 0.9824 - val_loss: 1.0774 - val_accuracy: 0.8028\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x256e92618b0>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Training with 15 epochs and 20% validation split. Logs of loss and accuracy are sent to tensorboard\n",
-    "epochs = 15\n",
+    "epochs = 12\n",
     "model.fit(X, y, batch_size=32, validation_split=0.2, epochs=epochs,verbose=1, callbacks=[tensorboard])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save Model\n",
+    "model.save('5Conv-Tag-CNN.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Load Model\n",
+    "model = tf.keras.models.load_model('5Conv-Tag-CNN.model')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "CATEGORIES = [\"Notag\", \"Tag\"]  # will use this to convert prediction num to string value\n",
+    "\n",
+    "notags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Notags_test\"\n",
+    "tags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Tags_test\"\n",
+    "\n",
+    "def prepare_testimages(filepath):\n",
+    "    IMG_SIZE = 256\n",
+    "    img_array = cv2.imread(filepath)  # read in the image\n",
+    "    new_array = cv2.resize(img_array, (IMG_SIZE, IMG_SIZE))  # resize image to match model's expected sizing\n",
+    "    return new_array.reshape(-1, IMG_SIZE, IMG_SIZE, 3)  # return the image with shaping that TF wants.\n",
+    "\n",
+    "tag_count_right = 0        \n",
+    "tagcount = len(os.listdir(tags_test_filepath))\n",
+    "#Tags_test\n",
+    "for img in os.listdir(tags_test_filepath):\n",
+    "    prediction = model.predict([prepare_testimages(os.path.join(tags_test_filepath,img))])\n",
+    "    if int(prediction[0][0]) == 1:\n",
+    "        tag_count_right += 1\n",
+    "\n",
+    "notag_count_right = 0        \n",
+    "notagcount = len(os.listdir(notags_test_filepath))\n",
+    "\n",
+    "#Notags_test\n",
+    "for img in os.listdir(notags_test_filepath):\n",
+    "    prediction = model.predict([prepare_testimages(os.path.join(notags_test_filepath,img))])\n",
+    "    if int(prediction[0][0]) == 0:\n",
+    "        notag_count_right += 1\n",
+    "        \n",
+    "print(\"tag_accuracy:{0}, notag_accuracy:{1}\".format(tag_count_right/tagcount, notag_count_right/notagcount))        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "CATEGORIES = [\"Notag\", \"Tag\"]  # will use this to convert prediction num to string value\n",
+    "\n",
+    "notags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Notags_test\"\n",
+    "tags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Tags_test\"\n",
+    "\n",
+    "def prepare_testimages(filepath):\n",
+    "    IMG_SIZE = 256\n",
+    "    img_array = cv2.imread(filepath)  # read in the image\n",
+    "    new_array = cv2.resize(img_array, (IMG_SIZE, IMG_SIZE))  # resize image to match model's expected sizing\n",
+    "    return new_array.reshape(-1, IMG_SIZE, IMG_SIZE, 3)  # return the image with shaping that TF wants.\n",
+    "\n",
+    "tag_count_right = 0        \n",
+    "tagcount = len(os.listdir(tags_test_filepath))\n",
+    "#Tags_test\n",
+    "for img in os.listdir(tags_test_filepath):\n",
+    "    prediction = model.predict([prepare_testimages(os.path.join(tags_test_filepath,img))])\n",
+    "    if int(prediction[0][0]) == 1:\n",
+    "        tag_count_right += 1\n",
+    "\n",
+    "notag_count_right = 0        \n",
+    "notagcount = len(os.listdir(notags_test_filepath))\n",
+    "\n",
+    "#Notags_test\n",
+    "for img in os.listdir(notags_test_filepath):\n",
+    "    prediction = model.predict([prepare_testimages(os.path.join(notags_test_filepath,img))])\n",
+    "    if int(prediction[0][0]) == 0:\n",
+    "        notag_count_right += 1\n",
+    "        \n",
+    "print(\"tag_accuracy:{0}, notag_accuracy:{1}\".format(tag_count_right/tagcount, notag_count_right/notagcount))        "
    ]
   }
  ],
